--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 .container {
@@ -439,3 +440,26 @@ html {
     margin-top: 5rem;
 }
 /* end of section 4 */
+
+
+.scroll-up-btn {
+    width: 5rem;
+    height: 5rem;
+    background-color: rgba(50, 231, 255, .8);
+    position: fixed;
+    bottom: 5rem;
+    right: 5rem;
+    border-radius: 50%;
+    font-size: 1.6rem;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color .5s;
+}
+
+.scroll-up-btn:hover {
+    background-color: #32e7ff;
+}
+
+
